--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <form action="http://http://34.64.87.88:5000/uploader"
+        <form action="http://http://##.##.##.##:####/uploader"
             method="POST"
             enctype="multipart/form-data">
             <input type="file" name="file" />
